<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.rasputinstudios.upcitemdbclient.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_Welcome"
        android:id="@+id/textView"
        android:textColor="@color/colorText"
        android:textSize="65sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_Greeting"
        android:id="@+id/textView2"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_EnterNameUPC"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:textSize="22sp"
        android:textColor="@color/colorText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchEditText"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorAccent"
        android:textSize="25sp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:layout_toStartOf="@+id/searchButton"
        android:layout_marginRight="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_Search"
        android:id="@+id/searchButton"
        android:layout_alignBottom="@+id/searchEditText"
        android:textColor="@android:color/white"
        android:background="@color/colorButton"
        android:layout_alignParentEnd="true"
        android:onClick="doSearch"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_Or"
        android:id="@+id/textView4"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:layout_below="@+id/searchEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/welcome_Scan"
        android:id="@+id/scanButton"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="40dp"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:textColor="@android:color/white"
        android:background="@color/colorButton"
        android:textSize="25sp"
        android:onClick="scan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_PoweredBy"
        android:id="@+id/textView5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorText"
        android:textSize="16sp" />
</RelativeLayout>
